add swagger and sqlc
