# internal/db/sqlc/models.go
@@ -1,0 +1,20 @@
+package db
+
+import (
+	"database/sql"
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type User struct {
+	UserID    uuid.UUID      `json:"user_id"`
+	FirstName string         `json:"first_name"`
+	LastName  string         `json:"last_name"`
+	Email     string         `json:"email"`
+	Phone     sql.NullString `json:"phone"`
+	Age       sql.NullInt32  `json:"age"`
+	Status    string         `json:"status"`
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+}
